Updated docs and removed useless endpoints
